Fix social media icons distortion when screen is reduced

--- a/style.css
+++ b/style.css
@@ -570,6 +570,7 @@ footer {
     flex-direction: row;
     width: 100%;
     justify-content: center;
+    align-items: flex-start;
     gap: 1em;
   }
 
